# quillspace

./: .env  .env.docker  .env.example  .env.production  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FRONTEND_BACKEND_INTEGRATION.md  GETTING_STARTED.md  MINIJINJA_2.12.0_CORRECTIONS.md  README.md  WEB_BUILDER_IMPLEMENTATION_STATUS.md  deploy-docker.sh  deploy.sh  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  test_wix_integration.rs
.ferrisup/: metadata.toml
config/: clickhouse-dev.xml  default.toml  development.toml  grafana-dev.yml  production.toml  prometheus-dev.yml
docker/: Dockerfile.api  Dockerfile.frontend  entrypoint.sh  postgresql.conf
docker/monitoring/: prometheus.yml
docs/: CONNECT_EXISTING_WEBSITES.md  CONSULTATION_SYSTEM.md  DOCUMENTATION_RECONCILIATION.md  ENGINEERING_ARCHITECTURE.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_WORKPLAN.md  PLATFORM_GUIDE.md  QUILLSPACE_WIX_SETUP.md  README.md  RLS_IMPLEMENTATION_SUMMARY.md  RLS_POLICY_REFERENCE.sql  RLS_QUICK_REFERENCE.md  RLS_SECURITY_DOCUMENTATION.md  SECURITY_GUIDE.md  TECHNICAL_ARCHITECTURE.md  USER_FLOW_GUIDE.md  WEB_BUILDER_ARCHITECTURE.md  WIX_INTEGRATION_GUIDE.md  WRITERS_CIRCLE_COMMUNITY.md  api.md  architecture.md  deployment.md  development.md  multi-tenancy.md
examples/: postgres_native_example.rs
frontend/: .eslintrc.cjs  Dockerfile  docker-entrypoint.sh  lint-check.sh  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/adapters/static/: vite.config.ts
frontend/public/: index.html
frontend/server/: @qwik-city-plan.js  @qwik-city-static-paths.js  entry.ssr.js  q-CNZ6HeEn.js
frontend/src/: entry.client.tsx  entry.static.tsx  global.css  root.tsx
frontend/src/components/auth/: login.tsx
frontend/src/components/content/: content-management.tsx
frontend/src/components/dashboard/: analytics-dashboard.tsx
frontend/src/components/footer/: footer.tsx
frontend/src/components/header/: header.tsx
frontend/src/components/router-head/: router-head.tsx
frontend/src/components/tenants/: tenant-settings.tsx
frontend/src/components/users/: user-management.tsx
frontend/src/components/website-builder/: customization-wizard.tsx  template-gallery.tsx  website-builder.tsx
frontend/src/config/: env.ts
frontend/src/contexts/: actions.tsx  auth.tsx
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/services/: api.ts
frontend/tmp/: tsconfig.tsbuildinfo
quillspace-client/: Dockerfile  docker-entrypoint.sh  eslint.config.js  nginx.conf  package.json  qwik.env.d.ts  vite.config.ts
quillspace-client/public/: wixstudio.avif
quillspace-client/src/: global.css  root.tsx
quillspace-client/src/api/: index.ts
quillspace-client/src/api/schema/: index.ts
quillspace-client/src/components/icons/: index.tsx
quillspace-client/src/components/login-form/: index.tsx
quillspace-client/src/contexts/: auth.tsx
quillspace-client/src/hooks/: README.md  useAuth.ts
quillspace-client/src/routes/: index.tsx  layout.tsx
quillspace-client/src/routes/(auth)/: layout.tsx
quillspace-client/src/services/: website-builder.service.ts
quillspace-client/src/types/: website-builders.ts
quillspace-client/src/utils/: auth.ts
quillspace-core/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
quillspace-core/.sqlx/: query-3add73885c600d05297e51d6a70767c20135814ae9d848550839dcdb6935bd79.json  query-78779398fa7407cec22bab5a6343c2773b945645637844546520fdd8917b70d2.json  query-7be4240bfb45064922cc3c9051d2b1c1587fdfe876df2d5f04dc0285b7c29484.json  query-8b86fe6ce0b08a7b63aa3e3b3bd235ce24c4ee88dc09678d493e1d1723c99333.json  query-90bfabbf8ba44422a80e02d6b0a7e3c757707c61a1e770356343195024c7f951.json  query-ac378d22644219bdf8b0847f69e16b3ca58ef402af7ff8252dc3d9fd43330d2c.json  query-bcacf8efe5bb21d478133fb5309a739bb22e6c24c962fcbfd51ca84d5bfdbca2.json
quillspace-core/migrations/: 001_complete_setup.sql  001_initial_schema.sql  002_complete_rls_security.sql  002_row_level_security.sql  003_complete_rls_implementation.sql  004_web_builder_schema.sql  006_puck_templates_architecture.sql  007_consultation_bookings.sql  008_email_automation.sql  009_connected_websites.sql  010_user_wix_site_mapping.sql  999_security_hardening.sql
quillspace-core/src/: config.rs  main.rs  types.rs
quillspace-core/src/auth/: casbin_auth.rs  jwt.rs  jwt_helpers.rs  mod.rs  permissions.rs
quillspace-core/src/config/: calendly_config.rs
quillspace-core/src/database/: clickhouse.rs  mod.rs  postgres.rs  rls_helper.rs
quillspace-core/src/middleware/: auth.rs  mod.rs  observability.rs  rate_limit.rs  tenant.rs
quillspace-core/src/routes/: analytics.rs  auth.rs  connected_websites.rs  consultations.rs  content.rs  mod.rs  pages.rs  security.rs  sites.rs  templates.rs  tenants.rs  tenants_old.rs  user_wix_sites.rs  users.rs  users_backup.rs  users_old.rs
quillspace-core/src/services/: analytics.rs  asset.rs  calendly.rs  composition.rs  connected_websites.rs  content.rs  email_automation.rs  mod.rs  page.rs  pages.rs  project_kickoff.rs  rls.rs  site.rs  template_cache.rs  template_engine.rs  tenant.rs  user.rs  wix_api.rs
quillspace-core/templates/: cozy-bookshop.html  literary-classic.html  modern-minimalist.html  puck-base.html
quilspace-lib/: Cargo.toml  README.md
quilspace-lib/src/: lib.rs
scripts/: 01_configure_custom_variables.sql  add-client-wix-site.sh  add-yasin-built-website.sql  add-yasin-website.sql  admin-security-hardening.sql  comprehensive-security-audit.sql  configurable-user-isolation.sql  fix-all-security-vulnerabilities.sql  init-dev.sql  seed-dev.sql  setup-calendly.sh  test-rls.sql  verify-complete-setup.sql  verify-rls.sql
(+27 files in other folders)
