[package]
name = "quilspace-lib"
version = "0.1.0"
edition = "2021"
description = "A Rust library created with FerrisUp"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"

[lib]
name = "quilspace_lib"
path = "src/lib.rs"
